--- a/src/assets/component/LeftNav/LeftNav.module.scss
+++ b/src/assets/component/LeftNav/LeftNav.module.scss
@@ -5,7 +5,7 @@
   left: 0;
   width: 250px;
   padding: 16px 16px;
-  background-color: #F0F0F0;
+  background-color: #f3f3f3;
 }
 
 .navTitleGroup {
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   align-items: start;
-  margin-bottom: 48px;
+  margin-bottom: 64px;
   .title {
     margin-bottom: 16px;
     font-size: 32px;
@@ -22,7 +22,7 @@
   .subTitle {
     font-size: 20px;
     font-weight: 500;
-    color: #6C6C6C;
+    color: #5B5B5B;
   }
 }
 
@@ -38,9 +38,9 @@
     text-decoration: none;
     font-size: 18px;
     font-weight: 500;
-    color: #9D9D9D;
+    color: #8E8E8E;
     &:hover {
-      color: #02C874;
+      color: #0000E3;
     }
   }
 }
