build: @media requery 600px

--- a/src/assets/component/AboutMeContent/AboutMeContent.module.scss
+++ b/src/assets/component/AboutMeContent/AboutMeContent.module.scss
@@ -1,44 +1,94 @@
-.meContainer {
-  margin-left: 250px;
-  padding-top: 150px;
-  display: flex;
-  justify-content: center;
+
+@media screen and (min-width: 600px) {
+  .meContainer {
+    padding-top: 200px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .infoContainer {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .avator {
+      display: block;
+      width: 120px;
+      height: 120px;
+      margin-right: 18px;
+      object-position: center;
+      object-fit: cover;
+      border-radius: 99em;
+    }
+  }
+
+  .textInfo {
+    width: 100%;
+    .chName {
+      margin-bottom: 2px;
+      font-size: 24px;
+      font-weight: 700;
+      letter-spacing: 2px;
+    }
+    .enName {
+      margin-bottom: 8px;
+      font-size: 16px;
+      font-weight: 700;
+      color: #5B5B5B;
+    }
+    .introduction {
+      font-size: 14px;
+      font-weight: 500;
+      text-align: justify;
+      color: #7B7B7B;
+    }
+  }
 }
 
-.infoContainer {
-  width: 60%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  .avator {
-    display: block;
-    width: 150px;
-    height: 150px;
-    margin-right: 24px;
-    object-position: center;
-    object-fit: cover;
-    border-radius: 99em;
+@media screen and (min-width: 1024px) {
+  .meContainer {
+    margin-left: 250px;
+    padding-top: 150px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .infoContainer {
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .avator {
+      display: block;
+      width: 150px;
+      height: 150px;
+      margin-right: 24px;
+      object-position: center;
+      object-fit: cover;
+      border-radius: 99em;
+    }
+  }
+
+  .textInfo {
+    width: 100%;
+    .chName {
+      margin-bottom: 2px;
+      font-size: 32px;
+      font-weight: 700;
+      letter-spacing: 2px;
+    }
+    .enName {
+      margin-bottom: 8px;
+      font-size: 18px;
+      font-weight: 700;
+      color: #5B5B5B;
+    }
+    .introduction {
+      font-size: 16px;
+      font-weight: 500;
+      text-align: justify;
+      color: #7B7B7B;
+    }
   }
 }
 
-.textInfo {
-  width: 100%;
-  .chName {
-    margin-bottom: 2px;
-    font-size: 32px;
-    font-weight: 700;
-    letter-spacing: 2px;
-  }
-  .enName {
-    margin-bottom: 8px;
-    font-size: 18px;
-    font-weight: 700;
-    color: #5B5B5B;
-  }
-  .introduction {
-    font-size: 16px;
-    font-weight: 500;
-    text-align: justify;
-    color: #7B7B7B;
-  }
-}
