--- a/src/assets/component/LeftNav/LeftNav.module.scss
+++ b/src/assets/component/LeftNav/LeftNav.module.scss
@@ -1,46 +1,87 @@
-.navContainer {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 250px;
-  padding: 16px 16px;
-  background-color: #f3f3f3;
-}
-
-.navTitleGroup {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  margin-bottom: 64px;
-  .title {
-    margin-bottom: 16px;
-    font-size: 32px;
-    font-weight: 700;
+@media screen and (min-width: 600px) {
+  .navContainer {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 90px;
+    padding: 16px 16px 16px 16px;
+    background-color: #f3f3f3;
   }
-  .subTitle {
-    font-size: 20px;
-    font-weight: 500;
-    color: #5B5B5B;
+  .navTitleGroup {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    .title {
+      font-size: 28px;
+      font-weight: 700;
+    }
+    .subTitle {
+      font-size: 16px;
+      font-weight: 500;
+      color: #5B5B5B;
+    }
   }
-}
-
-.indexGroup {
-  width: 100%;
-  height: 100px;
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  justify-content: space-around;
-  .portfolioLink,
-  .aboutMeLink {
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: 500;
-    color: #8E8E8E;
-    &:hover {
-      color: #0000E3;
+  .indexGroup {
+    height: 100%;
+    margin-left: 56px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    .portfolioLink,
+    .aboutMeLink {
+      margin-left: 32px;
+      text-decoration: none;
+      font-size: 16px;
+      font-weight: 500;
+      color: #8E8E8E;
+      &:hover {
+        color: #0000E3;
+      }
     }
   }
 }
+
+
+
+@media screen and (min-width: 1024px) {
+  .navContainer {
+    display: block;
+    height: 100%;
+    bottom: 0;
+    width: 250px;
+    padding: 16px 16px;
+    background-color: #f3f3f3;
+  }
+
+  .navTitleGroup {
+    height: auto;
+    justify-content: start;
+    margin-bottom: 64px;
+    .title {
+      margin-bottom: 16px;
+      font-size: 32px;
+    }
+    .subTitle {
+      font-size: 20px;
+    }
+  }
+
+  .indexGroup {
+    height: 100px;
+    margin-left: 0;
+    flex-direction: column;
+    align-items: start;
+    .portfolioLink,
+    .aboutMeLink {
+      margin-left: 0;
+      font-size: 18px;
+    }
+  }
+}
+
+
