--- a/src/assets/component/AboutMeContent/AboutMeContent.module.scss
+++ b/src/assets/component/AboutMeContent/AboutMeContent.module.scss
@@ -1,21 +1,19 @@
-
-@media screen and (min-width: 600px) {
-  .meContainer {
-    padding-top: 200px;
+.meContainer {
+    padding-top: 250px;
     display: flex;
     justify-content: center;
   }
 
   .infoContainer {
-    width: 90%;
+    width: 80%;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    text-align: center;
     .avator {
       display: block;
       width: 120px;
       height: 120px;
-      margin-right: 18px;
       object-position: center;
       object-fit: cover;
       border-radius: 99em;
@@ -43,29 +41,20 @@
       color: #7B7B7B;
     }
   }
-}
 
-@media screen and (min-width: 1024px) {
-  .meContainer {
-    margin-left: 250px;
-    padding-top: 150px;
-    display: flex;
-    justify-content: center;
-  }
 
+@media screen and (min-width: 600px) {
   .infoContainer {
-    width: 70%;
+    width: 85%;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    text-align: start;
     .avator {
-      display: block;
-      width: 150px;
-      height: 150px;
-      margin-right: 24px;
-      object-position: center;
-      object-fit: cover;
-      border-radius: 99em;
+      width: 120px;
+      height: 120px;
+      margin-right: 18px;
     }
   }
 
@@ -73,21 +62,41 @@
     width: 100%;
     .chName {
       margin-bottom: 2px;
-      font-size: 32px;
-      font-weight: 700;
-      letter-spacing: 2px;
+      font-size: 24px;
     }
     .enName {
       margin-bottom: 8px;
+      font-size: 16px;
+    }
+    .introduction {
+      font-size: 14px;
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .meContainer {
+    margin-left: 250px;
+    padding-top: 150px;
+  }
+  .infoContainer {
+    width: 70%;
+    .avator {
+      width: 150px;
+      height: 150px;
+    }
+  }
+
+  .textInfo {
+    width: 100%;
+    .chName {
+      font-size: 32px;
+    }
+    .enName {
       font-size: 18px;
-      font-weight: 700;
-      color: #5B5B5B;
     }
     .introduction {
       font-size: 16px;
-      font-weight: 500;
-      text-align: justify;
-      color: #7B7B7B;
     }
   }
 }
