--- a/src/assets/component/LeftNav/LeftNav.module.scss
+++ b/src/assets/component/LeftNav/LeftNav.module.scss
@@ -1,3 +1,102 @@
+.navContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 75px;
+  background-color: #f3f3f3;
+}
+
+.navTitleGroup {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  .title {
+    font-size: 24px;
+    font-weight: 700;
+  }
+  .subTitle {
+    font-size: 14px;
+    font-weight: 500;
+    color: #5B5B5B;
+  }
+}
+
+.toggleCheckbox {
+  display: none;
+}
+
+.navbarToggleLabel {
+  display: flex;
+  align-items: center;
+  height: 32px;
+  width: 30px;
+  position: absolute;
+  top: 50%;
+  right: 10%;
+  transform: translateY(-50%);
+}
+
+.navbarToggle,
+.navbarToggle::before,
+.navbarToggle::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 99em;
+  background-color: #000;
+}
+
+.navbarToggle::before,
+.navbarToggle::after {
+  content: '';
+  left: 0;
+}
+
+.navbarToggle::before {
+  top: 10px;
+}
+
+.navbarToggle::after {
+  bottom: 10px;
+}
+
+.indexGroup {
+  width: 100%;
+  padding: 12px 0 0 0;
+  background-color: #f3f3f39f;
+  transform: scale(1, 0);
+  transform-origin: top;
+  transition: transform 0.3s ease-out;
+}
+
+.toggleCheckbox:checked ~ .indexGroup {
+  transform: scale(1, 1);
+}
+
+.toggleCheckbox:checked ~ .indexGroup .navLink {
+  transition: opacity 0.2s ease-out 0.15s;
+  opacity: 1;
+}
+
+.navLink {
+  display: block;
+  padding-bottom: 12px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 500;
+  color: #8E8E8E;
+  opacity: 0;
+  &:hover {
+    color: #0000E3;
+  }
+}
+
+
 @media screen and (min-width: 600px) {
   .navContainer {
     display: flex;
@@ -7,43 +106,44 @@
     left: 0;
     right: 0;
     height: 90px;
-    padding: 16px 16px 16px 16px;
+    padding: 16px;
     background-color: #f3f3f3;
   }
   .navTitleGroup {
-    height: 100%;
-    display: flex;
     flex-direction: column;
     align-items: start;
     justify-content: center;
     .title {
       font-size: 28px;
-      font-weight: 700;
     }
     .subTitle {
       font-size: 16px;
-      font-weight: 500;
-      color: #5B5B5B;
     }
   }
+
+  .navbarToggleLabel {
+    display: none;
+  }
+
   .indexGroup {
+    position: static;
     height: 100%;
-    margin-left: 56px;
+    width: auto;
+    margin-top: 0px;
+    margin-left: 10%;
+    padding: 0;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    .portfolioLink,
-    .aboutMeLink {
+    transform: scale(1, 1);
+  }
+  .navLink {
+      padding-bottom: 0;
       margin-left: 32px;
-      text-decoration: none;
       font-size: 16px;
       font-weight: 500;
-      color: #8E8E8E;
-      &:hover {
-        color: #0000E3;
-      }
+      opacity: 1;
     }
-  }
 }
 
 
@@ -54,7 +154,6 @@
     height: 100%;
     bottom: 0;
     width: 250px;
-    padding: 16px 16px;
     background-color: #f3f3f3;
   }
 
@@ -76,12 +175,11 @@
     margin-left: 0;
     flex-direction: column;
     align-items: start;
-    .portfolioLink,
-    .aboutMeLink {
+  }
+  .navLink {
       margin-left: 0;
       font-size: 18px;
     }
-  }
 }
 
 
