--- a/src/assets/component/AboutMeContent/AboutMeContent.module.scss
+++ b/src/assets/component/AboutMeContent/AboutMeContent.module.scss
@@ -1,5 +1,5 @@
 .meContainer {
-    padding-top: 250px;
+    padding-top: 200px;
     display: flex;
     justify-content: center;
   }
@@ -44,6 +44,9 @@
 
 
 @media screen and (min-width: 600px) {
+  .meContainer {
+    padding-top: 250px;
+  }
   .infoContainer {
     width: 85%;
     display: flex;
