--- a/src/assets/component/AboutMeContent/AboutMeContent.module.scss
+++ b/src/assets/component/AboutMeContent/AboutMeContent.module.scss
@@ -10,7 +10,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    .avator {
+    .avatar {
       display: block;
       width: 120px;
       height: 120px;
@@ -54,7 +54,7 @@
     align-items: center;
     justify-content: space-between;
     text-align: start;
-    .avator {
+    .avatar {
       width: 120px;
       height: 120px;
       margin-right: 18px;
@@ -84,7 +84,7 @@
   }
   .infoContainer {
     width: 70%;
-    .avator {
+    .avatar {
       width: 150px;
       height: 150px;
     }
